--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
 <body>
 	<section class="product">
-  <div class="product_photo">
+  <div class="product__photo">
     <div class="photo-container">
       <div class="photo-main">
         <div class="controls">
